Fixes #12005 - align host selector for template preview

--- a/app/assets/stylesheets/editor.scss
+++ b/app/assets/stylesheets/editor.scss
@@ -19,3 +19,8 @@
 .fullscreen .editor {
   height: 100%;
 }
+
+span#preview_host_selector a.select2-choice {
+  height: 30px;
+  line-height: 1.2;
+}
